# gplugin

./: .hgignore  .hgtags  CMakeLists.txt  ChangeLog  HACKING  INSTALL  README  gplugin_0.27.orig.tar.gz.delta  gplugin_0.27.orig.tar.gz.id
cmake/Modules/: GObjectIntrospection.cmake  Gettextize.cmake  PkgConfigVariable.cmake  help2man.cmake
cmake/Toolchains/: cygwin-mingw.cmake
debian/: changelog  control  copyright  gir1.2-gplugin-0.0.install  libgplugin-dev.install  libgplugin-gtk-dev.install  libgplugin-gtk0.postrm  libgplugin-lua.install  libgplugin0.install
gplugin/: CMakeLists.txt  gplugin-core.c  gplugin-core.h  gplugin-enums.c.tmpl  gplugin-enums.h.tmpl  gplugin-file-tree.c  gplugin-file-tree.h  gplugin-loader-tests.c  gplugin-loader-tests.h  gplugin-loader.c  gplugin-loader.h  gplugin-manager.c  gplugin-manager.h  gplugin-marshallers.list  gplugin-native-loader.c  gplugin-native-loader.h  gplugin-native-plugin.c  gplugin-native-plugin.h  gplugin-native-private.h  gplugin-native.h.in  gplugin-options.c  gplugin-options.h  gplugin-plugin-info.c  gplugin-plugin-info.h  gplugin-plugin.c  gplugin-plugin.h  gplugin-private.c  gplugin-private.h  gplugin-query.c  gplugin-uninstalled.pc.in  gplugin-version.c  gplugin-version.h.in  gplugin.h.in  gplugin.pc.in
gplugin-gtk/: CMakeLists.txt  gplugin-gtk-plugin-info.c  gplugin-gtk-plugin-info.h  gplugin-gtk-plugin-info.ui  gplugin-gtk-store.c  gplugin-gtk-store.h  gplugin-gtk-view.c  gplugin-gtk-view.h  gplugin-gtk-viewer.c  gplugin-gtk.h.in  gplugin-gtk.pc.in
gplugin/tests/: CMakeLists.txt  test-bind-local.c  test-core.c  test-dynamic-type.c  test-id-collision.c  test-load-on-query.c  test-native-loader.c  test-option-group.c  test-plugin-info.c  test-plugin-manager-paths.c  test-signals.c  test-unresolved-symbol.c  test-version-compare.c  test-versioned-dependencies.c
gplugin/tests/bad-plugins/: CMakeLists.txt  query-error.c
gplugin/tests/bind-local/: CMakeLists.txt  bind-local.c
gplugin/tests/dynamic-type/: CMakeLists.txt  dynamic-test.h  dynamic-type-provider.c  dynamic-type-user.c
gplugin/tests/id-collision/: CMakeLists.txt  id-collision1.c  id-collision2.c
gplugin/tests/load-on-query-fail/: CMakeLists.txt  load-on-query-fail.c
gplugin/tests/load-on-query-pass/: CMakeLists.txt  load-on-query-pass.c
gplugin/tests/plugins/: CMakeLists.txt  basic-plugin.c  broken-dependent-plugin.c  dependent-plugin.c  load-exception.c  load-failed.c  unload-failed.c
gplugin/tests/unresolved-symbol/: CMakeLists.txt  unresolved-symbol.c
gplugin/tests/versioned-dependencies/: CMakeLists.txt  bar.c  baz.c  exact1.c  exact2.c  fez.c  greater-equal.c  greater.c  less-equal.c  less.c  no-version.c  super-dependent.c
lua/: CMakeLists.txt  gplugin-lua-core.c  gplugin-lua-loader.c  gplugin-lua-loader.h  gplugin-lua-plugin.c  gplugin-lua-plugin.h  gplugin-lua-test-lgi.c
lua/tests/: CMakeLists.txt  test-lua-loader.c  test-lua-moon-loader.c
lua/tests/lua-plugins/: basic.lua  dependent.lua  load-exception.lua  load-failed.lua  unload-failed.lua
lua/tests/moonscript-plugins/: basic.moon  dependent.moon  load-exception.moon  load-failed.moon  unload-failed.moon
packaging/debian/: changelog  libgplugin-gtk-bin.install  libgplugin-gtk0.install  libgplugin-python.install  libgplugin0.postrm  rules
packaging/debian/source/: options
perl/: CMakeLists.txt  gplugin-perl-core.c  gplugin-perl-loader.c  gplugin-perl-loader.h  gplugin-perl-plugin.c  gplugin-perl-plugin.h
perl/tests/plugins/: basic.pl
plugins/: CMakeLists.txt  gplugin-license-check.c
po/: CMakeLists.txt
python/: CMakeLists.txt  gplugin-python-core.c  gplugin-python-loader.c  gplugin-python-loader.h  gplugin-python-plugin.c  gplugin-python-plugin.h  gplugin-python-test-pygobject.c  gplugin-python-utils.c  gplugin-python-utils.h
python/tests/: CMakeLists.txt  test-python-loader.c  test-python-utils.c
python/tests/plugins/: basic.py  dependent.py  load-exception.py  load-failed.py  unload-failed.py
scripts/: bitbucket_upload  makeviz.sh
xsl/: gtester-junit.xsl
